--- a/templates/data/fcgis/qgisserver/uwsgi_ondemand.ini.j2
+++ b/templates/data/fcgis/qgisserver/uwsgi_ondemand.ini.j2
@@ -13,7 +13,7 @@ threads = {{ qgisserver_threads }}
 max-requests = 1000
 
 cheap
-idle = 600
+idle = {{ qgisserver_idle }}
 die-on-idle = true
 
 # logging
