--- a/templates/data/fcgis/qgisserver/uwsgi_ondemand.ini.j2
+++ b/templates/data/fcgis/qgisserver/uwsgi_ondemand.ini.j2
@@ -22,7 +22,7 @@ log-date = true
 logfile-chown = true
 # env = QGIS_SERVER_LOG_LEVEL=1
 env = QGIS_SERVER_LOG_FILE=/data/fcgis/giscube_qgisserver/qgisserver.log
-env = QGIS_AUTH_DB_DIR_PATH=/var/www
+env = QGIS_AUTH_DB_DIR_PATH=%d/auth_db
 
 # system
 uid = {{ qgisserver_owner }}
