--- a/templates/etc/apt/sources.list.d/qgis.list.j2
+++ b/templates/etc/apt/sources.list.d/qgis.list.j2
@@ -1,1 +1,1 @@
-deb     http://qgis.org/debian {{ ansible_distribution_release }} main
+deb [arch=amd64] http://qgis.org/debian {{ ansible_distribution_release }} main
