--- a/templates/data/fcgis/qgisserver/uwsgi_ondemand.ini.j2
+++ b/templates/data/fcgis/qgisserver/uwsgi_ondemand.ini.j2
@@ -3,6 +3,7 @@ procname-prefix-spaced=/fcgis/%c
 
 chdir = %d
 worker-exec=/usr/lib/cgi-bin/qgis_mapserv.fcgi
+need-app = false
 
 # must not create the socket in ondemand mode
 # socket = %d/uwsgi.sock
